# book_api

./: .dockerignore  .env.sample  Dockerfile  README.md  compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
app/: main.py
app/api/: __init__.py  auth.py  books.py  dependencies.py  main.py  sse.py
app/auth/: __init__.py  crud.py  exceptions.py  models.py  schemas.py  security.py
app/books/: __init__.py  crud.py  exceptions.py  models.py  schemas.py
app/core/: config.py
app/db/: connection.py  redis.py
tests/: conftest.py  mocks.py  test_api_jwt.py  test_auth_api.py  test_books_api.py
tests/books/: test_books_api.py
